# inyokaedit

./: .appveyor.yml  .bzrignore  .gitignore  AUTHORS  CDownload.cpp  CDownload.h  CDownloadArticle.cpp  CDownloadArticle.h  CFileOperations.cpp  CFileOperations.h  CHighlighter.cpp  CHighlighter.h  CInsertSyntaxElement.cpp  CInsertSyntaxElement.h  CInterwiki.cpp  CInterwiki.h  CInyokaEdit.cpp  CInyokaEdit.h  CInyokaEdit.ui  CMakeLists.txt  CParseLinks.cpp  CParseLinks.h  CParser.cpp  CParser.h  CProgressDialog.cpp  CProgressDialog.h  CProgressDialog.ui  CSettings.cpp  CSettings.h  CSpellCheckDialog.cpp  CSpellCheckDialog.h  CSpellCheckDialog.ui  CSpellChecker.cpp  CSpellChecker.h  CTableTemplate.cpp  CTableTemplate.h  CTableTemplate.ui  CTemplates.cpp  CTemplates.h  CTextEditor.cpp  (+32 more)
application/: CDownload.cpp  CDownload.h  CDownloadImg.cpp  CDownloadImg.h  CFileOperations.cpp  CFileOperations.h  CFindReplace.cpp  CFindReplace.h  CFindReplace.ui  CHighlighter.cpp  CHighlighter.h  CInyokaEdit.cpp  CInyokaEdit.h  CInyokaEdit.ui  CMakeLists.txt  CParseImgMap.cpp  CParser.cpp  CParser.h  CPlugins.cpp  CPlugins.h  CProgressDialog.cpp  CProgressDialog.h  CProgressDialog.ui  CProvisionalTplParser.cpp  CSettings.cpp  CSettings.h  CSettingsDialog.cpp  CSettingsDialog.h  CSettingsDialog.ui  CSyntaxCheck.cpp  CSyntaxCheck.h  CTemplates.cpp  CTemplates.h  CTextEditor.cpp  CTextEditor.h  CUpload.cpp  CUpload.h  CUtils.cpp  CUtils.h  CXmlParser.cpp  (+36 more)
application/data/: data.qrc  macros.conf  win.rc
application/data/fallback-icons/: CREDITS
application/data/icons/: CREDITS
application/data/mac/: Info.plist
application/data/unix/: inyokaedit.desktop  org.inyokaproject.inyokaedit.desktop  org.inyokaproject.inyokaedit.metainfo.xml
application/iWikiLinks/: iWikiLinks.xml
application/lang/: inyokaedit_de.qm  inyokaedit_de.ts  inyokaedit_en.ts  inyokaedit_nl.qm  inyokaedit_nl.ts  translations.qrc
application/parser/: CMakeLists.txt  CParseImgMap.cpp  CParseImgMap.h  CParseLinks.cpp  CParseLinks.h  CParseTemplates.cpp  CParseTemplates.h  CParser.cpp  CParser.h  CProvisionalTplParser.cpp  CProvisionalTplParser.h  macros.cpp  macros.h  parseimgmap.cpp  parseimgmap.h  parselinks.cpp  parselinks.h  parselist.cpp  parselist.h  parser.cpp  parser.h  parser.pri  parsetable.cpp  parsetable.h  parsetemplates.cpp  parsetemplates.h  parsetextformats.cpp  parsetextformats.h  parsetxtmap.cpp  parsetxtmap.h  provisionaltplparser.cpp  provisionaltplparser.h
application/res/: Info.plist  inyokaedit.rc  inyokaedit_resources.qrc  inyokaedit_win.rc  macros.conf  translations.qrc
application/res/images/: CREDITS  icon.icns  inyokaedit.xpm
application/src/: CDownload.cpp  CDownload.h  CFileOperations.cpp  CHighlighter.cpp  CInyokaEdit.cpp  CInyokaEdit.h  CInyokaEdit.ui  CParseTemplates.cpp  CProgressDialog.ui  CSettings.cpp  CSettingsDialog.cpp  CSettingsDialog.ui  CTableTemplate.ui  CTextEditor.cpp  CTextEditor.h  CUtils.cpp  IEditorPlugin.h  main.cpp
application/templates/: CMakeLists.txt  CTemplates.cpp  CTemplates.h  CXmlParser.cpp  CXmlParser.h  templates.cpp  templates.h  templates.pri
application/templates/de/: Ausbaufähig.tpl  Fremdpaket.tpl  Fremdquelle.tpl  Getestet.tpl  Icon-Übersicht.tpl  Projekte.tpl  Translations.conf
man/: CMakeLists.txt  inyokaedit.1.in
man/de/: inyokaedit.1.in
man/de/man1/: inyokaedit.1
man/man1/: inyokaedit.1
plugins/: CMakeLists.txt  plugins.pro
plugins/highlighter/: CHighlighter.cpp  CHighlighter.h  CHighlighter.ui  CMakeLists.txt  CSyntaxHighlighter.cpp  CSyntaxHighlighter.h  highlighter.cpp  highlighter.h  highlighter.pro  highlighter.ui  syntaxhighlighter.cpp  syntaxhighlighter.h
plugins/highlighter/lang/: highlighter_de.qm  highlighter_de.ts  highlighter_en.ts  highlighter_nl.qm  highlighter_nl.ts
plugins/highlighter/res/: dark-style.conf  highlighter_resources.qrc  standard-style.conf  translations.qrc
plugins/hotkey/: CHotkey.cpp  CHotkey.h  CHotkey.ui  CMakeLists.txt  hotkey.cpp  hotkey.h  hotkey.pro  hotkey.ui
plugins/hotkey/lang/: hotkey_de.qm  hotkey_de.ts  hotkey_en.ts  hotkey_nl.qm  hotkey_nl.ts
plugins/hotkey/res/: hotkey_resources.qrc  translations.qrc
plugins/knowledgebox/: CKnowledgeBox.cpp  CKnowledgeBox.h  CKnowledgeBox.ui  knowledgebox.cpp  knowledgebox.h  knowledgebox.pro  knowledgebox.ui
plugins/knowledgebox/lang/: knowledgebox_de.qm  knowledgebox_de.ts
plugins/knowledgebox/res/: knowledgebox_resources.qrc
plugins/spellchecker/: CMakeLists.txt  CSpellCheckDialog.cpp  CSpellCheckDialog.h  CSpellCheckDialog.ui  CSpellChecker.cpp  CSpellChecker.h  NOTICE  spellcheckdialog.cpp  spellcheckdialog.h  spellcheckdialog.ui  spellchecker.cpp  spellchecker.h  spellchecker.pro
plugins/spellchecker-hunspell/: CMakeLists.txt  NOTICE  hunspellcheckdialog.cpp  hunspellcheckdialog.h  hunspellcheckdialog.ui  spellchecker-hunspell.cpp  spellchecker-hunspell.h  spellchecker-hunspell.pro
plugins/spellchecker-hunspell/lang/: spellchecker-hunspell_de.qm  spellchecker-hunspell_de.ts  spellchecker-hunspell_en.ts  spellchecker-hunspell_nl.qm  spellchecker-hunspell_nl.ts
plugins/spellchecker-hunspell/res/: spellchecker-hunspell_resources.qrc  translations.qrc
plugins/spellchecker-nuspell/: CMakeLists.txt  NOTICE  nuspellcheckdialog.cpp  nuspellcheckdialog.h  nuspellcheckdialog.ui  spellchecker-nuspell.cpp  spellchecker-nuspell.h  spellchecker-nuspell.pro
plugins/spellchecker-nuspell/lang/: spellchecker-nuspell_de.qm  spellchecker-nuspell_de.ts  spellchecker-nuspell_en.ts  spellchecker-nuspell_nl.qm  spellchecker-nuspell_nl.ts
plugins/spellchecker-nuspell/res/: translations.qrc
plugins/spellchecker/lang/: spellchecker_de.qm  (+4 more)
plugins/tabletemplate/: CTableTemplate.cpp  CTableTemplate.h  CTableTemplate.ui  tabletemplate.cpp  tabletemplate.h  tabletemplate.pro  tabletemplate.ui
plugins/uu_knowledgebox/: CMakeLists.txt  uu_knowledgebox.cpp  uu_knowledgebox.h  uu_knowledgebox.pro  uu_knowledgebox.ui
plugins/uu_tabletemplate/: CMakeLists.txt  uu_tabletemplate.cpp  uu_tabletemplate.h  uu_tabletemplate.pro  uu_tabletemplate.ui
(+314 files in other folders)
